--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.guava:guava:22.0-android'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
