--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.mivas.myharmonicasongs"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 9
-        versionName "1.5.3"
+        versionCode 10
+        versionName "1.6.0"
     }
     buildTypes {
         release {
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.guava:guava:22.0-android'
+    compile 'com.github.QuadFlask:colorpicker:0.0.13'
 }
