--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.google.guava:guava:22.0-android'
-    compile 'com.github.QuadFlask:colorpicker:0.0.13'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.google.guava:guava:22.0-android'
+    implementation 'com.github.QuadFlask:colorpicker:0.0.13'
 }
